--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
     justify-content: center;
     padding-top: 2%;
     padding-bottom: 10%;
+    margin: 0;
 
 }
 .list li {
@@ -97,7 +98,8 @@ body {
 
 .rodape {
     background-color: #6D6EF4;
-    border-radius: 19px 19px 0px 0px;;
+    border-radius: 19px 19px 0px 0px;
+    padding-bottom: 0;
 }
 .nav-bar {
     padding-top: 3%;
@@ -113,10 +115,7 @@ body {
     padding-bottom: 1%;
 }
 .nav-list li img {
-    height: 6vh;
-}
-.rodape {
-    height: 40%;
+    height: 5vh;
 }
 
 .voltar {
@@ -154,6 +153,7 @@ body {
 }
 .caption {
     padding: 0.5%;
+    font-size: 1rem;
 }
 .titulo-page {
     font-size: 2.5rem;
